# docx-to-wav

./: .gitignore  GEMINI.md  README.md  config.yaml  config_google_tts.yaml  config_xtts.yaml  convert_docx.py  convert_docx_google_tts.py  convert_docx_xtts.py  generate_title_audio.py  pyproject.toml  test_all_male_voices.py  test_ssml_cleanup.py  test_voices.py  test_voices_google_tts.py  test_voices_xtts.py  update_test_voices.py  utils.py
.kilo/plans/: 1775151300652-misty-sailor.md  1775407193743-playful-garden.md  1775407585823-stellar-moon.md  1775409578454-quiet-rocket.md
input_docs/: Chapitre 1 - Le Vertige de la Chair.docx
plans/: fix-apostrophe-tts.md
tts_project/: README.md  convert_docx.py  main.py  pyproject.toml
