[project]
name = "tts-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "kokoro>=0.9.4",
    "numpy<2",
    "phonemizer>=3.3.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "scipy",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers<4.40",
    "tts>=0.22.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
