[project]
name = "tts-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-texttospeech>=2.18.0",
    "kokoro>=0.9.4",
    "numpy>=2.4.3",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "soundfile>=0.13.1",
]
