[project]
name = "tts-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "kokoro>=0.9.4",
    "numpy>=2.4.3",
    "phonemizer>=3.3.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
